--- a/Backend/package.json
+++ b/Backend/package.json
@@ -14,8 +14,11 @@
     "@fastify/static": "^9.0.0",
     "dotenv": "^17.2.3",
     "fastify": "^5.7.2",
-    "nodemon": "^3.1.11",
-    "openai": "^6.16.0"
+    "openai": "^6.16.0",
+    "pdfkit": "^0.17.2"
   },
-  "description": ""
+  "description": "",
+  "devDependencies": {
+    "nodemon": "^3.1.11"
+  }
 }
