--- a/Backend/package.json
+++ b/Backend/package.json
@@ -12,8 +12,10 @@
   "license": "ISC",
   "dependencies": {
     "@fastify/static": "^9.0.0",
+    "bcrypt": "^5.1.1",
     "dotenv": "^17.2.3",
     "fastify": "^5.7.2",
+    "jsonwebtoken": "^9.0.2",
     "openai": "^6.16.0",
     "pdfkit": "^0.17.2"
   },
