--- a/Backend/package.json
+++ b/Backend/package.json
@@ -5,17 +5,24 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon src/server.js"
+    "dev": "nodemon src/server.js",
+    "start": "node src/server.js",
+    "docker:up": "docker-compose up -d",
+    "docker:down": "docker-compose down",
+    "docker:logs": "docker-compose logs -f backend",
+    "docker:rebuild": "docker-compose up -d --build"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@fastify/cors": "^9.0.1",
     "@fastify/static": "^9.0.0",
     "bcrypt": "^5.1.1",
     "dotenv": "^17.2.3",
     "fastify": "^5.7.2",
     "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.1.0",
     "openai": "^6.16.0",
     "pdfkit": "^0.17.2"
   },
