--- a/Backend/package.json
+++ b/Backend/package.json
@@ -7,6 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon src/server.js",
     "start": "node src/server.js",
+    "seed": "node seed.js",
     "docker:up": "docker-compose up -d",
     "docker:down": "docker-compose down",
     "docker:logs": "docker-compose logs -f backend",
@@ -16,7 +17,6 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@fastify/cors": "^9.0.1",
     "@fastify/static": "^9.0.0",
     "bcrypt": "^5.1.1",
     "dotenv": "^17.2.3",
