--- a/Backend/package.json
+++ b/Backend/package.json
@@ -17,12 +17,15 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@fastify/cors": "^11.2.0",
     "@fastify/static": "^9.0.0",
-    "bcrypt": "^5.1.1",
+    "@fastify/swagger": "^9.6.1",
+    "@fastify/swagger-ui": "^5.2.5",
+    "bcrypt": "^6.0.0",
     "dotenv": "^17.2.3",
     "fastify": "^5.7.2",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.1.0",
+    "mongoose": "^9.1.5",
     "openai": "^6.16.0",
     "pdfkit": "^0.17.2"
   },
